--- a/src/components/Table.css
+++ b/src/components/Table.css
@@ -92,4 +92,31 @@
     background: #050538;
     color: #fff;
     font-size: 20px;
+    padding: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .table tbody {
+        max-height: 100vh;
+    }
+    .filter .filter-input {
+        width: 100%;
+    }
+
+    .filter .filter-clear {
+        width: 100%;
+        margin-top: 10px;
+    }
+}
+
+
+@media screen and (max-width: 920px) {
+    .filter .filter-input {
+        width: 100%;
+    }
+
+    .filter .filter-clear {
+        width: 100%;
+        margin-top: 10px;
+    }
 }
