--- a/src/components/UniversityCardItem.css
+++ b/src/components/UniversityCardItem.css
@@ -33,3 +33,14 @@
     color: #fff;
 }
 
+@media screen and (max-width: 1024px) {
+    .uni-card-item {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 481px) {
+    .uni-card-item {
+        width: 100%;
+    }
+}
